src/parser.output
Nonterminals useless in grammar

    Identifier_list
    Storage_class_specifier


Terminals unused in grammar

    CONSTANT
    PTR_OP
    TYPE_NAME
    EXTERN
    STATIC
    AUTO
    REGISTER
    SHORT
    LONG
    SIGNED
    CONST
    VOLATILE
    UNION
    ELLIPSIS
    DO
    GOTO


Rules useless in grammar

  159 Identifier_list: IDENTIFIER
  160                | Identifier_list ',' IDENTIFIER


State 265 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: Translation_unit

    2 Translation_unit: External_declaration
    3                 | Translation_unit External_declaration

    4 External_declaration: Function_definition
    5                     | Declaration

    6 Function_definition: Declaration_specifiers Declarator Compound_statement

    7 Declaration_specifiers: Type_specifier
    8                       | Type_specifier Declaration_specifiers
    9                       | TYPEDEF
   10                       | TYPEDEF Declaration_specifiers

   11 Pointer: '*'
   12        | '*' Pointer

   13 Type_specifier: INT
   14               | Struct_specifier
   15               | FLOAT
   16               | DOUBLE
   17               | CHAR
   18               | VOID
   19               | UNSIGNED
   20               | Enum_specifier

   21 Enum_specifier: ENUM '{' Enumerator_list '}'
   22               | ENUM IDENTIFIER '{' Enumerator_list '}'
   23               | ENUM IDENTIFIER

   24 Enumerator_list: Enumerator
   25                | Enumerator_list ',' Enumerator

   26 Enumerator: IDENTIFIER
   27           | IDENTIFIER '=' Constant_expression

   28 Declarator: Direct_declarator
   29           | Pointer Direct_declarator

   30 Direct_declarator: IDENTIFIER
   31                  | '(' Declarator ')'
   32                  | Direct_declarator '(' ')'
   33                  | Direct_declarator '[' Constant_expression ']'
   34                  | Direct_declarator '[' ']'
   35                  | Direct_declarator '(' Parameter_type_list ')'

   36 Parameter_type_list: Parameter_list

   37 Parameter_list: Parameter_declaration
   38               | Parameter_list ',' Parameter_declaration

   39 Parameter_declaration: Declaration_specifiers Declarator

   40 Struct_specifier: STRUCT IDENTIFIER '{' Struct_declaration_list '}'
   41                 | STRUCT IDENTIFIER

   42 Struct_declaration_list: Struct_declaration
   43                        | Struct_declaration_list Struct_declaration

   44 Struct_declaration: Specifier_qualifier_list Struct_declarator_list ';'

   45 Struct_declarator_list: Struct_declarator
   46                       | Struct_declarator_list ',' Struct_declarator

   47 Struct_declarator: Declarator

   48 Specifier_qualifier_list: Type_specifier

   49 Constant_expression: Conditional_expression

   50 Compound_statement: '{' '}'
   51                   | '{' Statement_list '}'
   52                   | '{' Declaration_list '}'
   53                   | '{' Declaration_list Statement_list '}'

   54 Declaration_list: Declaration
   55                 | Declaration_list Declaration

   56 Declaration: Declaration_specifiers ';'
   57            | Declaration_specifiers Init_declarator_list ';'

   58 Init_declarator_list: Init_declarator
   59                     | Init_declarator_list ',' Init_declarator

   60 Init_declarator: Declarator
   61                | Declarator '=' Initializer

   62 Initializer: Assignment_expression
   63            | '{' Initializer_list '}'
   64            | '{' Initializer_list ',' '}'

   65 Initializer_list: Initializer
   66                 | Initializer_list ',' Initializer

   67 Statement: Compound_statement
   68          | Expression_statement
   69          | Selection_statement
   70          | Iteration_statement
   71          | Jump_statemnet
   72          | Labeled_statement

   73 Expression: Assignment_expression
   74           | Expression ',' Assignment_expression

   75 Assignment_expression: Unary_expression '=' Assignment_expression
   76                      | Unary_expression MUL_ASSIGN Assignment_expression
   77                      | Unary_expression DIV_ASSIGN Assignment_expression
   78                      | Unary_expression MOD_ASSIGN Assignment_expression
   79                      | Unary_expression ADD_ASSIGN Assignment_expression
   80                      | Unary_expression SUB_ASSIGN Assignment_expression
   81                      | Unary_expression LEFT_ASSIGN Assignment_expression
   82                      | Unary_expression RIGHT_ASSIGN Assignment_expression
   83                      | Unary_expression AND_ASSIGN Assignment_expression
   84                      | Unary_expression XOR_ASSIGN Assignment_expression
   85                      | Unary_expression OR_ASSIGN Assignment_expression
   86                      | Conditional_expression

   87 Unary_expression: Postfix_expression
   88                 | INC_OP Unary_expression
   89                 | DEC_OP Unary_expression
   90                 | '&' Cast_expression
   91                 | '*' Cast_expression
   92                 | '+' Cast_expression
   93                 | '-' Cast_expression
   94                 | '~' Cast_expression
   95                 | '!' Cast_expression
   96                 | SIZEOF Unary_expression

   97 Postfix_expression: Primary_expression
   98                   | Postfix_expression '(' ')'
   99                   | Postfix_expression '(' Argument_expression_list ')'
  100                   | Postfix_expression '.' IDENTIFIER
  101                   | Postfix_expression INC_OP
  102                   | Postfix_expression DEC_OP
  103                   | Postfix_expression '[' Expression ']'

  104 Argument_expression_list: Assignment_expression
  105                         | Argument_expression_list ',' Assignment_expression

  106 Primary_expression: IDENTIFIER
  107                   | INT_CONSTANT
  108                   | FLOAT_CONSTANT
  109                   | CHAR_LITERAL
  110                   | DOUBLE_CONSTANT
  111                   | STRING_LITERAL
  112                   | '(' Expression ')'

  113 Additive_expression: Multiplicative_expression
  114                    | Additive_expression '+' Multiplicative_expression
  115                    | Additive_expression '-' Multiplicative_expression

  116 Multiplicative_expression: Cast_expression
  117                          | Multiplicative_expression '*' Cast_expression
  118                          | Multiplicative_expression '/' Cast_expression
  119                          | Multiplicative_expression '%' Cast_expression

  120 Cast_expression: Unary_expression

  121 Shift_expression: Additive_expression
  122                 | Shift_expression LEFT_OP Additive_expression
  123                 | Shift_expression RIGHT_OP Additive_expression

  124 Relational_expression: Shift_expression
  125                      | Relational_expression '>' Shift_expression
  126                      | Relational_expression '<' Shift_expression
  127                      | Relational_expression LE_OP Shift_expression
  128                      | Relational_expression GE_OP Shift_expression

  129 Equality_expression: Relational_expression
  130                    | Equality_expression EQ_OP Relational_expression
  131                    | Equality_expression NE_OP Relational_expression

  132 Conditional_expression: Logical_or_expression
  133                       | Logical_or_expression '?' Expression ':' Conditional_expression

  134 Logical_or_expression: Logical_and_expression
  135                      | Logical_or_expression OR_OP Logical_and_expression

  136 Logical_and_expression: Or_expression
  137                       | Logical_and_expression AND_OP Or_expression

  138 Or_expression: Xor_expression
  139              | Or_expression '|' Xor_expression

  140 Xor_expression: And_expression
  141               | Xor_expression '^' And_expression

  142 And_expression: Equality_expression
  143               | And_expression '&' Equality_expression

  144 Statement_list: Statement
  145               | Statement_list Statement

  146 Labeled_statement: CASE Constant_expression ':' Statement
  147                  | DEFAULT ':' Statement

  148 Expression_statement: Expression ';'

  149 Selection_statement: IF '(' Expression ')' Statement
  150                    | IF '(' Expression ')' Statement ELSE Statement
  151                    | SWITCH '(' Expression ')' Statement

  152 Iteration_statement: WHILE '(' Expression ')' Statement
  153                    | FOR '(' Expression_statement Expression_statement ')' Statement
  154                    | FOR '(' Expression_statement Expression_statement Expression ')' Statement

  155 Jump_statemnet: RETURN ';'
  156               | BREAK ';'
  157               | CONTINUE ';'
  158               | RETURN Expression ';'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 95
    '%' (37) 119
    '&' (38) 90 143
    '(' (40) 31 32 35 98 99 112 149 150 151 152 153 154
    ')' (41) 31 32 35 98 99 112 149 150 151 152 153 154
    '*' (42) 11 12 91 117
    '+' (43) 92 114
    ',' (44) 25 38 46 59 64 66 74 105
    '-' (45) 93 115
    '.' (46) 100
    '/' (47) 118
    ':' (58) 133 146 147
    ';' (59) 44 56 57 148 155 156 157 158
    '<' (60) 126
    '=' (61) 27 61 75
    '>' (62) 125
    '?' (63) 133
    '[' (91) 33 34 103
    ']' (93) 33 34 103
    '^' (94) 141
    '{' (123) 21 22 40 50 51 52 53 63 64
    '|' (124) 139
    '}' (125) 21 22 40 50 51 52 53 63 64
    '~' (126) 94
    error (256)
    CONSTANT (258)
    FLOAT_CONSTANT <float_number> (259) 108
    DOUBLE_CONSTANT <double_number> (260) 110
    IDENTIFIER <string> (261) 22 23 26 27 30 40 41 100 106
    INT_CONSTANT <int_number> (262) 107
    STRING_LITERAL <string> (263) 111
    SIZEOF (264) 96
    CHAR_LITERAL <int_number> (265) 109
    PTR_OP (266)
    INC_OP (267) 88 101
    DEC_OP (268) 89 102
    LEFT_OP (269) 122
    RIGHT_OP (270) 123
    LE_OP (271) 127
    GE_OP (272) 128
    EQ_OP (273) 130
    NE_OP (274) 131
    AND_OP (275) 137
    OR_OP (276) 135
    MUL_ASSIGN (277) 76
    DIV_ASSIGN (278) 77
    MOD_ASSIGN (279) 78
    ADD_ASSIGN (280) 79
    SUB_ASSIGN (281) 80
    LEFT_ASSIGN (282) 81
    RIGHT_ASSIGN (283) 82
    AND_ASSIGN (284) 83
    XOR_ASSIGN (285) 84
    OR_ASSIGN (286) 85
    TYPE_NAME (287)
    TYPEDEF (288) 9 10
    EXTERN (289)
    STATIC (290)
    AUTO (291)
    REGISTER (292)
    CHAR (293) 17
    SHORT (294)
    INT (295) 13
    LONG (296)
    SIGNED (297)
    UNSIGNED (298) 19
    FLOAT (299) 15
    DOUBLE (300) 16
    CONST (301)
    VOLATILE (302)
    VOID (303) 18
    STRUCT (304) 40 41
    UNION (305)
    ENUM (306) 21 22 23
    ELLIPSIS (307)
    CASE (308) 146
    DEFAULT (309) 147
    IF (310) 149 150
    ELSE (311) 150
    SWITCH (312) 151
    WHILE (313) 152
    DO (314)
    FOR (315) 153 154
    GOTO (316)
    CONTINUE (317) 157
    BREAK (318) 156
    RETURN (319) 155 158


Nonterminals, with rules where they appear

    $accept (89)
        on left: 0
    ROOT <top> (90)
        on left: 1
        on right: 0
    Translation_unit <list> (91)
        on left: 2 3
        on right: 1 3
    External_declaration <top> (92)
        on left: 4 5
        on right: 2 3
    Function_definition <top> (93)
        on left: 6
        on right: 4
    Declaration_specifiers <top> (94)
        on left: 7 8 9 10
        on right: 6 8 10 39 56 57
    Pointer (95)
        on left: 11 12
        on right: 12 29
    Type_specifier <top> (96)
        on left: 13 14 15 16 17 18 19 20
        on right: 7 8 48
    Enum_specifier <top> (97)
        on left: 21 22 23
        on right: 20
    Enumerator_list <list> (98)
        on left: 24 25
        on right: 21 22 25
    Enumerator <top> (99)
        on left: 26 27
        on right: 24 25
    Declarator <top> (100)
        on left: 28 29
        on right: 6 31 39 47 60 61
    Direct_declarator <top> (101)
        on left: 30 31 32 33 34 35
        on right: 28 29 32 33 34 35
    Parameter_type_list <list> (102)
        on left: 36
        on right: 35
    Parameter_list <list> (103)
        on left: 37 38
        on right: 36 38
    Parameter_declaration <top> (104)
        on left: 39
        on right: 37 38
    Struct_specifier <top> (105)
        on left: 40 41
        on right: 14
    Struct_declaration_list <list> (106)
        on left: 42 43
        on right: 40 43
    Struct_declaration <top> (107)
        on left: 44
        on right: 42 43
    Struct_declarator_list <list> (108)
        on left: 45 46
        on right: 44 46
    Struct_declarator <top> (109)
        on left: 47
        on right: 45 46
    Specifier_qualifier_list <top> (110)
        on left: 48
        on right: 44
    Constant_expression <top> (111)
        on left: 49
        on right: 27 33 146
    Compound_statement <top> (112)
        on left: 50 51 52 53
        on right: 6 67
    Declaration_list <list> (113)
        on left: 54 55
        on right: 52 53 55
    Declaration <top> (114)
        on left: 56 57
        on right: 5 54 55
    Init_declarator_list <list> (115)
        on left: 58 59
        on right: 57 59
    Init_declarator <top> (116)
        on left: 60 61
        on right: 58 59
    Initializer <top> (117)
        on left: 62 63 64
        on right: 61 65 66
    Initializer_list <list> (118)
        on left: 65 66
        on right: 63 64 66
    Statement <top> (119)
        on left: 67 68 69 70 71 72
        on right: 144 145 146 147 149 150 151 152 153 154
    Expression <top> (120)
        on left: 73 74
        on right: 74 103 112 133 148 149 150 151 152 154 158
    Assignment_expression <top> (121)
        on left: 75 76 77 78 79 80 81 82 83 84 85 86
        on right: 62 73 74 75 76 77 78 79 80 81 82 83 84 85 104 105
    Unary_expression <top> (122)
        on left: 87 88 89 90 91 92 93 94 95 96
        on right: 75 76 77 78 79 80 81 82 83 84 85 88 89 96 120
    Postfix_expression <top> (123)
        on left: 97 98 99 100 101 102 103
        on right: 87 98 99 100 101 102 103
    Argument_expression_list <list> (124)
        on left: 104 105
        on right: 99 105
    Primary_expression <top> (125)
        on left: 106 107 108 109 110 111 112
        on right: 97
    Additive_expression <top> (126)
        on left: 113 114 115
        on right: 114 115 121 122 123
    Multiplicative_expression <top> (127)
        on left: 116 117 118 119
        on right: 113 114 115 117 118 119
    Cast_expression <top> (128)
        on left: 120
        on right: 90 91 92 93 94 95 116 117 118 119
    Shift_expression <top> (129)
        on left: 121 122 123
        on right: 122 123 124 125 126 127 128
    Relational_expression <top> (130)
        on left: 124 125 126 127 128
        on right: 125 126 127 128 129 130 131
    Equality_expression <top> (131)
        on left: 129 130 131
        on right: 130 131 142 143
    Conditional_expression <top> (132)
        on left: 132 133
        on right: 49 86 133
    Logical_or_expression <top> (133)
        on left: 134 135
        on right: 132 133 135
    Logical_and_expression <top> (134)
        on left: 136 137
        on right: 134 135 137
    Or_expression <top> (135)
        on left: 138 139
        on right: 136 137 139
    Xor_expression <top> (136)
        on left: 140 141
        on right: 138 139 141
    And_expression <top> (137)
        on left: 142 143
        on right: 140 141 143
    Statement_list <list> (138)
        on left: 144 145
        on right: 51 53 145
    Labeled_statement <top> (139)
        on left: 146 147
        on right: 72
    Expression_statement <top> (140)
        on left: 148
        on right: 68 153 154
    Selection_statement <top> (141)
        on left: 149 150 151
        on right: 69
    Iteration_statement <top> (142)
        on left: 152 153 154
        on right: 70
    Jump_statemnet <top> (143)
        on left: 155 156 157 158
        on right: 71


State 0

    0 $accept: . ROOT $end

    TYPEDEF   shift, and go to state 1
    CHAR      shift, and go to state 2
    INT       shift, and go to state 3
    UNSIGNED  shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    VOID      shift, and go to state 7
    STRUCT    shift, and go to state 8
    ENUM      shift, and go to state 9

    ROOT                    go to state 10
    Translation_unit        go to state 11
    External_declaration    go to state 12
    Function_definition     go to state 13
    Declaration_specifiers  go to state 14
    Type_specifier          go to state 15
    Enum_specifier          go to state 16
    Struct_specifier        go to state 17
    Declaration             go to state 18


State 1

    9 Declaration_specifiers: TYPEDEF .
   10                       | TYPEDEF . Declaration_specifiers

    TYPEDEF   shift, and go to state 1
    CHAR      shift, and go to state 2
    INT       shift, and go to state 3
    UNSIGNED  shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    VOID      shift, and go to state 7
    STRUCT    shift, and go to state 8
    ENUM      shift, and go to state 9

    $default  reduce using rule 9 (Declaration_specifiers)

    Declaration_specifiers  go to state 19
    Type_specifier          go to state 15
    Enum_specifier          go to state 16
    Struct_specifier        go to state 17


State 2

   17 Type_specifier: CHAR .

    $default  reduce using rule 17 (Type_specifier)


State 3

   13 Type_specifier: INT .

    $default  reduce using rule 13 (Type_specifier)


State 4

   19 Type_specifier: UNSIGNED .

    $default  reduce using rule 19 (Type_specifier)


State 5

   15 Type_specifier: FLOAT .

    $default  reduce using rule 15 (Type_specifier)


State 6

   16 Type_specifier: DOUBLE .

    $default  reduce using rule 16 (Type_specifier)


State 7

   18 Type_specifier: VOID .

    $default  reduce using rule 18 (Type_specifier)


State 8

   40 Struct_specifier: STRUCT . IDENTIFIER '{' Struct_declaration_list '}'
   41                 | STRUCT . IDENTIFIER

    IDENTIFIER  shift, and go to state 20


State 9

   21 Enum_specifier: ENUM . '{' Enumerator_list '}'
   22               | ENUM . IDENTIFIER '{' Enumerator_list '}'
   23               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 21
    '{'         shift, and go to state 22


State 10

    0 $accept: ROOT . $end

    $end  shift, and go to state 23


State 11

    1 ROOT: Translation_unit .
    3 Translation_unit: Translation_unit . External_declaration

    TYPEDEF   shift, and go to state 1
    CHAR      shift, and go to state 2
    INT       shift, and go to state 3
    UNSIGNED  shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    VOID      shift, and go to state 7
    STRUCT    shift, and go to state 8
    ENUM      shift, and go to state 9

    $default  reduce using rule 1 (ROOT)

    External_declaration    go to state 24
    Function_definition     go to state 13
    Declaration_specifiers  go to state 14
    Type_specifier          go to state 15
    Enum_specifier          go to state 16
    Struct_specifier        go to state 17
    Declaration             go to state 18


State 12

    2 Translation_unit: External_declaration .

    $default  reduce using rule 2 (Translation_unit)


State 13

    4 External_declaration: Function_definition .

    $default  reduce using rule 4 (External_declaration)


State 14

    6 Function_definition: Declaration_specifiers . Declarator Compound_statement
   56 Declaration: Declaration_specifiers . ';'
   57            | Declaration_specifiers . Init_declarator_list ';'

    IDENTIFIER  shift, and go to state 25
    '*'         shift, and go to state 26
    '('         shift, and go to state 27
    ';'         shift, and go to state 28

    Pointer               go to state 29
    Declarator            go to state 30
    Direct_declarator     go to state 31
    Init_declarator_list  go to state 32
    Init_declarator       go to state 33


State 15

    7 Declaration_specifiers: Type_specifier .
    8                       | Type_specifier . Declaration_specifiers

    TYPEDEF   shift, and go to state 1
    CHAR      shift, and go to state 2
    INT       shift, and go to state 3
    UNSIGNED  shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    VOID      shift, and go to state 7
    STRUCT    shift, and go to state 8
    ENUM      shift, and go to state 9

    $default  reduce using rule 7 (Declaration_specifiers)

    Declaration_specifiers  go to state 34
    Type_specifier          go to state 15
    Enum_specifier          go to state 16
    Struct_specifier        go to state 17


State 16

   20 Type_specifier: Enum_specifier .

    $default  reduce using rule 20 (Type_specifier)


State 17

   14 Type_specifier: Struct_specifier .

    $default  reduce using rule 14 (Type_specifier)


State 18

    5 External_declaration: Declaration .

    $default  reduce using rule 5 (External_declaration)


State 19

   10 Declaration_specifiers: TYPEDEF Declaration_specifiers .

    $default  reduce using rule 10 (Declaration_specifiers)


State 20

   40 Struct_specifier: STRUCT IDENTIFIER . '{' Struct_declaration_list '}'
   41                 | STRUCT IDENTIFIER .

    '{'  shift, and go to state 35

    $default  reduce using rule 41 (Struct_specifier)


State 21

   22 Enum_specifier: ENUM IDENTIFIER . '{' Enumerator_list '}'
   23               | ENUM IDENTIFIER .

    '{'  shift, and go to state 36

    $default  reduce using rule 23 (Enum_specifier)


State 22

   21 Enum_specifier: ENUM '{' . Enumerator_list '}'

    IDENTIFIER  shift, and go to state 37

    Enumerator_list  go to state 38
    Enumerator       go to state 39


State 23

    0 $accept: ROOT $end .

    $default  accept


State 24

    3 Translation_unit: Translation_unit External_declaration .

    $default  reduce using rule 3 (Translation_unit)


State 25

   30 Direct_declarator: IDENTIFIER .

    $default  reduce using rule 30 (Direct_declarator)


State 26

   11 Pointer: '*' .
   12        | '*' . Pointer

    '*'  shift, and go to state 26

    $default  reduce using rule 11 (Pointer)

    Pointer  go to state 40


State 27

   31 Direct_declarator: '(' . Declarator ')'

    IDENTIFIER  shift, and go to state 25
    '*'         shift, and go to state 26
    '('         shift, and go to state 27

    Pointer            go to state 29
    Declarator         go to state 41
    Direct_declarator  go to state 31


State 28

   56 Declaration: Declaration_specifiers ';' .

    $default  reduce using rule 56 (Declaration)


State 29

   29 Declarator: Pointer . Direct_declarator

    IDENTIFIER  shift, and go to state 25
    '('         shift, and go to state 27

    Direct_declarator  go to state 42


State 30

    6 Function_definition: Declaration_specifiers Declarator . Compound_statement
   60 Init_declarator: Declarator .
   61                | Declarator . '=' Initializer

    '{'  shift, and go to state 43
    '='  shift, and go to state 44

    $default  reduce using rule 60 (Init_declarator)

    Compound_statement  go to state 45


State 31

   28 Declarator: Direct_declarator .
   32 Direct_declarator: Direct_declarator . '(' ')'
   33                  | Direct_declarator . '[' Constant_expression ']'
   34                  | Direct_declarator . '[' ']'
   35                  | Direct_declarator . '(' Parameter_type_list ')'

    '('  shift, and go to state 46
    '['  shift, and go to state 47

    $default  reduce using rule 28 (Declarator)


State 32

   57 Declaration: Declaration_specifiers Init_declarator_list . ';'
   59 Init_declarator_list: Init_declarator_list . ',' Init_declarator

    ','  shift, and go to state 48
    ';'  shift, and go to state 49


State 33

   58 Init_declarator_list: Init_declarator .

    $default  reduce using rule 58 (Init_declarator_list)


State 34

    8 Declaration_specifiers: Type_specifier Declaration_specifiers .

    $default  reduce using rule 8 (Declaration_specifiers)


State 35

   40 Struct_specifier: STRUCT IDENTIFIER '{' . Struct_declaration_list '}'

    CHAR      shift, and go to state 2
    INT       shift, and go to state 3
    UNSIGNED  shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    VOID      shift, and go to state 7
    STRUCT    shift, and go to state 8
    ENUM      shift, and go to state 9

    Type_specifier            go to state 50
    Enum_specifier            go to state 16
    Struct_specifier          go to state 17
    Struct_declaration_list   go to state 51
    Struct_declaration        go to state 52
    Specifier_qualifier_list  go to state 53


State 36

   22 Enum_specifier: ENUM IDENTIFIER '{' . Enumerator_list '}'

    IDENTIFIER  shift, and go to state 37

    Enumerator_list  go to state 54
    Enumerator       go to state 39


State 37

   26 Enumerator: IDENTIFIER .
   27           | IDENTIFIER . '=' Constant_expression

    '='  shift, and go to state 55

    $default  reduce using rule 26 (Enumerator)


State 38

   21 Enum_specifier: ENUM '{' Enumerator_list . '}'
   25 Enumerator_list: Enumerator_list . ',' Enumerator

    '}'  shift, and go to state 56
    ','  shift, and go to state 57


State 39

   24 Enumerator_list: Enumerator .

    $default  reduce using rule 24 (Enumerator_list)


State 40

   12 Pointer: '*' Pointer .

    $default  reduce using rule 12 (Pointer)


State 41

   31 Direct_declarator: '(' Declarator . ')'

    ')'  shift, and go to state 58


State 42

   29 Declarator: Pointer Direct_declarator .
   32 Direct_declarator: Direct_declarator . '(' ')'
   33                  | Direct_declarator . '[' Constant_expression ']'
   34                  | Direct_declarator . '[' ']'
   35                  | Direct_declarator . '(' Parameter_type_list ')'

    '('  shift, and go to state 46
    '['  shift, and go to state 47

    $default  reduce using rule 29 (Declarator)


State 43

   50 Compound_statement: '{' . '}'
   51                   | '{' . Statement_list '}'
   52                   | '{' . Declaration_list '}'
   53                   | '{' . Declaration_list Statement_list '}'

    FLOAT_CONSTANT   shift, and go to state 59
    DOUBLE_CONSTANT  shift, and go to state 60
    IDENTIFIER       shift, and go to state 61
    INT_CONSTANT     shift, and go to state 62
    STRING_LITERAL   shift, and go to state 63
    SIZEOF           shift, and go to state 64
    CHAR_LITERAL     shift, and go to state 65
    INC_OP           shift, and go to state 66
    DEC_OP           shift, and go to state 67
    TYPEDEF          shift, and go to state 1
    CHAR             shift, and go to state 2
    INT              shift, and go to state 3
    UNSIGNED         shift, and go to state 4
    FLOAT            shift, and go to state 5
    DOUBLE           shift, and go to state 6
    VOID             shift, and go to state 7
    STRUCT           shift, and go to state 8
    ENUM             shift, and go to state 9
    CASE             shift, and go to state 68
    DEFAULT          shift, and go to state 69
    IF               shift, and go to state 70
    SWITCH           shift, and go to state 71
    WHILE            shift, and go to state 72
    FOR              shift, and go to state 73
    CONTINUE         shift, and go to state 74
    BREAK            shift, and go to state 75
    RETURN           shift, and go to state 76
    '*'              shift, and go to state 77
    '{'              shift, and go to state 43
    '}'              shift, and go to state 78
    '('              shift, and go to state 79
    '&'              shift, and go to state 80
    '+'              shift, and go to state 81
    '-'              shift, and go to state 82
    '~'              shift, and go to state 83
    '!'              shift, and go to state 84

    Declaration_specifiers     go to state 85
    Type_specifier             go to state 15
    Enum_specifier             go to state 16
    Struct_specifier           go to state 17
    Compound_statement         go to state 86
    Declaration_list           go to state 87
    Declaration                go to state 88
    Statement                  go to state 89
    Expression                 go to state 90
    Assignment_expression      go to state 91
    Unary_expression           go to state 92
    Postfix_expression         go to state 93
    Primary_expression         go to state 94
    Additive_expression        go to state 95
    Multiplicative_expression  go to state 96
    Cast_expression            go to state 97
    Shift_expression           go to state 98
    Relational_expression      go to state 99
    Equality_expression        go to state 100
    Conditional_expression     go to state 101
    Logical_or_expression      go to state 102
    Logical_and_expression     go to state 103
    Or_expression              go to state 104
    Xor_expression             go to state 105
    And_expression             go to state 106
    Statement_list             go to state 107
    Labeled_statement          go to state 108
    Expression_statement       go to state 109
    Selection_statement        go to state 110
    Iteration_statement        go to state 111
    Jump_statemnet             go to state 112


State 44

   61 Init_declarator: Declarator '=' . Initializer

    FLOAT_CONSTANT   shift, and go to state 59
    DOUBLE_CONSTANT  shift, and go to state 60
    IDENTIFIER       shift, and go to state 61
    INT_CONSTANT     shift, and go to state 62
    STRING_LITERAL   shift, and go to state 63
    SIZEOF           shift, and go to state 64
    CHAR_LITERAL     shift, and go to state 65
    INC_OP           shift, and go to state 66
    DEC_OP           shift, and go to state 67
    '*'              shift, and go to state 77
    '{'              shift, and go to state 113
    '('              shift, and go to state 79
    '&'              shift, and go to state 80
    '+'              shift, and go to state 81
    '-'              shift, and go to state 82
    '~'              shift, and go to state 83
    '!'              shift, and go to state 84

    Initializer                go to state 114
    Assignment_expression      go to state 115
    Unary_expression           go to state 92
    Postfix_expression         go to state 93
    Primary_expression         go to state 94
    Additive_expression        go to state 95
    Multiplicative_expression  go to state 96
    Cast_expression            go to state 97
    Shift_expression           go to state 98
    Relational_expression      go to state 99
    Equality_expression        go to state 100
    Conditional_expression     go to state 101
    Logical_or_expression      go to state 102
    Logical_and_expression     go to state 103
    Or_expression              go to state 104
    Xor_expression             go to state 105
    And_expression             go to state 106


State 45

    6 Function_definition: Declaration_specifiers Declarator Compound_statement .

    $default  reduce using rule 6 (Function_definition)


State 46

   32 Direct_declarator: Direct_declarator '(' . ')'
   35                  | Direct_declarator '(' . Parameter_type_list ')'

    TYPEDEF   shift, and go to state 1
    CHAR      shift, and go to state 2
    INT       shift, and go to state 3
    UNSIGNED  shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    VOID      shift, and go to state 7
    STRUCT    shift, and go to state 8
    ENUM      shift, and go to state 9
    ')'       shift, and go to state 116

    Declaration_specifiers  go to state 117
    Type_specifier          go to state 15
    Enum_specifier          go to state 16
    Parameter_type_list     go to state 118
    Parameter_list          go to state 119
    Parameter_declaration   go to state 120
    Struct_specifier        go to state 17


State 47

   33 Direct_declarator: Direct_declarator '[' . Constant_expression ']'
   34                  | Direct_declarator '[' . ']'

    FLOAT_CONSTANT   shift, and go to state 59
    DOUBLE_CONSTANT  shift, and go to state 60
    IDENTIFIER       shift, and go to state 61
    INT_CONSTANT     shift, and go to state 62
    STRING_LITERAL   shift, and go to state 63
    SIZEOF           shift, and go to state 64
    CHAR_LITERAL     shift, and go to state 65
    INC_OP           shift, and go to state 66
    DEC_OP           shift, and go to state 67
    '*'              shift, and go to state 77
    '('              shift, and go to state 79
    ']'              shift, and go to state 121
    '&'              shift, and go to state 80
    '+'              shift, and go to state 81
    '-'              shift, and go to state 82
    '~'              shift, and go to state 83
    '!'              shift, and go to state 84

    Constant_expression        go to state 122
    Unary_expression           go to state 123
    Postfix_expression         go to state 93
    Primary_expression         go to state 94
    Additive_expression        go to state 95
    Multiplicative_expression  go to state 96
    Cast_expression            go to state 97
    Shift_expression           go to state 98
    Relational_expression      go to state 99
    Equality_expression        go to state 100
    Conditional_expression     go to state 124
    Logical_or_expression      go to state 102
    Logical_and_expression     go to state 103
    Or_expression              go to state 104
    Xor_expression             go to state 105
    And_expression             go to state 106


State 48

   59 Init_declarator_list: Init_declarator_list ',' . Init_declarator

    IDENTIFIER  shift, and go to state 25
    '*'         shift, and go to state 26
    '('         shift, and go to state 27

    Pointer            go to state 29
    Declarator         go to state 125
    Direct_declarator  go to state 31
    Init_declarator    go to state 126


State 49

   57 Declaration: Declaration_specifiers Init_declarator_list ';' .

    $default  reduce using rule 57 (Declaration)


State 50

   48 Specifier_qualifier_list: Type_specifier .

    $default  reduce using rule 48 (Specifier_qualifier_list)


State 51

   40 Struct_specifier: STRUCT IDENTIFIER '{' Struct_declaration_list . '}'
   43 Struct_declaration_list: Struct_declaration_list . Struct_declaration

    CHAR      shift, and go to state 2
    INT       shift, and go to state 3
    UNSIGNED  shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    VOID      shift, and go to state 7
    STRUCT    shift, and go to state 8
    ENUM      shift, and go to state 9
    '}'       shift, and go to state 127

    Type_specifier            go to state 50
    Enum_specifier            go to state 16
    Struct_specifier          go to state 17
    Struct_declaration        go to state 128
    Specifier_qualifier_list  go to state 53


State 52

   42 Struct_declaration_list: Struct_declaration .

    $default  reduce using rule 42 (Struct_declaration_list)


State 53

   44 Struct_declaration: Specifier_qualifier_list . Struct_declarator_list ';'

    IDENTIFIER  shift, and go to state 25
    '*'         shift, and go to state 26
    '('         shift, and go to state 27

    Pointer                 go to state 29
    Declarator              go to state 129
    Direct_declarator       go to state 31
    Struct_declarator_list  go to state 130
    Struct_declarator       go to state 131


State 54

   22 Enum_specifier: ENUM IDENTIFIER '{' Enumerator_list . '}'
   25 Enumerator_list: Enumerator_list . ',' Enumerator

    '}'  shift, and go to state 132
    ','  shift, and go to state 57


State 55

   27 Enumerator: IDENTIFIER '=' . Constant_expression

    FLOAT_CONSTANT   shift, and go to state 59
    DOUBLE_CONSTANT  shift, and go to state 60
    IDENTIFIER       shift, and go to state 61
    INT_CONSTANT     shift, and go to state 62
    STRING_LITERAL   shift, and go to state 63
    SIZEOF           shift, and go to state 64
    CHAR_LITERAL     shift, and go to state 65
    INC_OP           shift, and go to state 66
    DEC_OP           shift, and go to state 67
    '*'              shift, and go to state 77
    '('              shift, and go to state 79
    '&'              shift, and go to state 80
    '+'              shift, and go to state 81
    '-'              shift, and go to state 82
    '~'              shift, and go to state 83
    '!'              shift, and go to state 84
